# ccwc

./: .gitignore  CMakeLists.txt  flake.nix
src/: main.cpp  wc_utils.cpp  wc_utils.hpp
tests/: test_wc.cpp
